--- a/style.css
+++ b/style.css
@@ -32,6 +32,14 @@
     
   }
 
+html,body
+{
+  width:100%;
+  height:100%;
+  margin:0px;
+  padding:0px;
+  overflow-x:hidden;
+}
 
 .header .logo
   {
